# Convex-hull-reconstruction-and-partitioning-from-RGBD-scanned-data

./: CMakeLists.txt  README.md  convex_hull_subdivision_ply_demo.cpp
